05-Services/Ingress/Header-Based/Examples/header-routing-canary.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-main-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: app.akashshankar.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-main-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-header-routing-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "x-route"
    nginx.ingress.kubernetes.io/canary-by-header-value: "tools"
spec:
  ingressClassName: nginx
  rules:
  - host: app.akashshankar.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-tools-service
            port:
              number: 80
